--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,9 +15,9 @@
         <nav class="header-nav"> <!--nav клас для навігації-->
              <a class="header-link-logo" href="#">Web<span class="header-span">Studio</span></a>
             <ul class="header-list-nav"> <!--List - список-->
-                <li><a href="../goit-markup-hw-01/index.html" class="header-link current">Студия</a></li>
-                <li><a href="../goit-markup-hw-02/portfolio.html" class="header-link ">Портфолио</a></li>
-                <li><a href="#" class="header-link">Контакты</a></li>
+                <li><a href="../goit-markup-hw-01/index.html" class="header-link current">Студія</a></li>
+                <li><a href="../goit-markup-hw-02/portfolio.html" class="header-link ">Портфоліо</a></li>
+                <li><a href="#" class="header-link">Контакти</a></li>
             </ul>
             </nav>
             <ul class="header-contact">
@@ -29,8 +29,8 @@
     <main>
         <!--Рішення бізнесу и кнопка-->
         <section class="section-bisnes">
-            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-            <button type="button" class="hero-btn">Заказать услугу</button>
+            <h1 class="bisnes-title">ЭЕфективні рішення для <br> вашого бізнесу</h1>
+            <button type="button" class="hero-btn">Замовити послугу</button>
 
         </section>
         <!--Наші переваги-->
@@ -38,27 +38,27 @@
             <h2 class="visually-hidden">Характеристики</h2>
             <ul class="characteristics-list">
                 <li>
-                    <h3 class="characteristics-title">Внимание к деталям</h3>
-                    <p class="characteristics-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="characteristics-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="characteristics-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3 class="characteristics-title">Пунктуальность</h3>
-                    <p class="characteristics-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="characteristics-title">ППУНКТУАЛЬНІСТЬ</h3>
+                    <p class="characteristics-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3 class="characteristics-title">Планирование</h3>
-                    <p class="characteristics-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="characteristics-title">ПЛАНУВАННЯ</h3>
+                    <p class="characteristics-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3 class="characteristics-title">Современные технологии</h3>
-                <p class="characteristics-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="characteristics-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                <p class="characteristics-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
 
         </section>
         <!--Чем мы занимаемся-->
         <section class="section-type-activity">
-            <h2 class="type-activity-title">Чем мы занимаемся</h2>
+            <h2 class="type-activity-title">Чим ми займаємося</h2>
             <ul class="type-activity-list">
                 <li><img src="./images/img-comp.jpg" alt="Программирование" width="370" height="294" class="type-activity-img"></li>
                 <li><img src="./images/img-tel.jpg" alt="Адаптиная верстка"  width="370" height="294" class="type-activity-img"></li>
@@ -72,19 +72,19 @@
             <ul class="team-list">
                 <li>
                 <img src="./images/people-1.jpg" alt="Работник Игорь" width="270" height="260">
-                <h3 class="team-name">Игорь Демьяненко</h3>
+                <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p lang="en" class="team-text">Product Designer</p>
                 </li>
                 <li><img src="./images/people-2.jpg" alt="Работник Ольга" width="270" height="260">
-                <h3 class="team-name">Ольга Репина</h3>
+                <h3 class="team-name">Ольга Репіна</h3>
                 <p lang="en" class="team-text" >Frontend Developer</p>
                 </li>
                 <li><img src="./images/people-3.jpg" alt="Работник Николай" width="270" height="260">
-                <h3 class="team-name">Николай Тарасов</h3>
+                <h3 class="team-name">Микола Тарасов</h3>
                 <p lang="en" class="team-text">Marketing</p>
                 </li>
                 <li><img src="./images/people-4.jpg" alt="Работник Михаил" width="270" height="260">
-                <h3 class="team-name">Михаил Ермаков</h3>
+                <h3 class="team-name">Михайло Ермаков</h3>
                 <p lang="en" class="team-text">UI Designer</p>
                 </li>
                 
@@ -98,7 +98,7 @@
         <a href="#" class="footer-logo">Web<span class="footer-span">Studio</span></a>
         <address>
             <ul class="footer-list">
-         <li><p class="footer-text"> г. Киев, пр-т Леси Украинки, 26</p></li>
+         <li><p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p></li>
          <li><a href="mailto:info@devstudio.com" class="footer-link-mail">info@devstudio.com</a></li>
          <li><a href="tel:+380961111111" class="footer-link-tel"> +38 096 111 11 11 </a></li>
 
