--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <!--Рішення бізнесу и кнопка-->
         <section class="section-bisnes">
-            <h1 class="bisnes-title">ЭЕфективні рішення для <br> вашого бізнесу</h1>
+            <h1 class="bisnes-title">Ефективні рішення для <br> вашого бізнесу</h1>
             <button type="button" class="hero-btn">Замовити послугу</button>
 
         </section>
@@ -42,7 +42,7 @@
                     <p class="characteristics-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3 class="characteristics-title">ППУНКТУАЛЬНІСТЬ</h3>
+                    <h3 class="characteristics-title">ПУНКТУАЛЬНІСТЬ</h3>
                     <p class="characteristics-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
